--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
+node_modules
+dist
+/dist
 index.html
 /index.html
 # Runtime data
